tasks/testsuite/fixtures/parser-misc/fail/stmt-class-static-blocks-in-ts-with-invalid-modifier-1.ts
class Foo { abstract static { 1 + 1 }; }